# fastapi-problem-details

./: CHANGELOG.md  README.md  pyproject.toml  snippet.py  tox.ini
.github/workflows/: ci.yml  release.yml
src/fastapi_problem_details/: __init__.py  _version.py  error_handlers.py  problem.py
tests/: test_app_integration.py  test_problem.py
